--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,16 +31,20 @@
       "error",
       "ignorePackages",
       {
-        "js": "never",
         "ts": "never",
         "tsx": "never"
+      }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
       }
     ]
   },
   "settings": {
     "import/resolver": {
       "typescript": {}
-
     }
   }
 }
