--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.26.1",
+    "axios": "^0.23.0",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,6 +17,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/react": "^18.0.9",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
